add TS-MNL baseline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ authors = [
 dependencies = [
     "numpy",
     "scipy",
-    "cvxpy"
+    "cvxpy",
+    "pandas",
+    "pyarrow",
 ]
 
 [tool.setuptools]
